# mcp-flowgate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PERFORMANCE.md  README.md  RESEARCH.md  SECURITY.md  SPEC.md  SPEC_RESEARCH_GAPS.md  STABILITY.md  STRUCTUREOS-FEEDBACK.md  WIP.md  server.json  smithery.yaml
crates/mcp-flowgate/: Cargo.toml
crates/mcp-flowgate-core/: Cargo.toml
crates/mcp-flowgate-core/benches/: gateway_overhead.rs  workflow_bench.rs
crates/mcp-flowgate-core/src/: audit.rs  cap_verb.rs  capability.rs  config.rs  contract_hash.rs  discovery.rs  discovery_indexer.rs  embeddings.rs  error.rs  fs.rs  guards.rs  hot_reload.rs  lexicon.rs  lexicon_candidates.rs  lib.rs  mapping.rs  model.rs  ports.rs  proxy_workflow.rs  reliability.rs  repo.rs  runtime.rs  runtime_chain.rs  runtime_links.rs  runtime_records.rs  runtime_response.rs  runtime_schema.rs  runtime_submit.rs  slot_constraint.rs  slot_table.rs  store.rs  store_file.rs  store_postgres.rs  store_sqlite.rs  templating.rs  tier.rs  use_binding.rs  validate.rs
crates/mcp-flowgate-core/tests/: approvals_cli.rs  audit_evidence_enrichment.rs  audit_rotation.rs  authoring_preferences.rs  baseline_scenarios.rs  blackboard_typing.rs  capability.rs  chain_audit.rs  chain_audit_criticality.rs  chain_basic.rs  chain_guidance.rs  child_workflow_record.rs  composability.rs  config_flag_scope.rs  config_validation.rs  contract_hash_canonical.rs  definition_versioning.rs  delegate_passthrough.rs  deterministic_chain.rs  discovery.rs  embeddings.rs  evidence_guard.rs  evidence_guard_filters.rs  examples_validate.rs  fire_cap.rs  graceful_shutdown.rs  guard_unset_slot.rs  guidance.rs  guidance_acknowledged.rs  hitl_interaction.rs  inspect_audit.rs  invalid_confidence_at_submit.rs  invariants.rs  invariants_actor_audit.rs  invariants_governance.rs  invariants_proxy.rs  lexicon.rs  lexicon_candidates.rs  mapping_array_expansion.rs  migration_check.rs  (+30 more)
crates/mcp-flowgate-core/tests/common/: chain.rs  invariants.rs  mod.rs  transition_records.rs
crates/mcp-flowgate-core/tests/fixtures/cognitive-architectures/: flowgate.repo.yaml
crates/mcp-flowgate-core/tests/fixtures/cognitive-architectures/capabilities/: cap.coordinate.label-and-route.yaml  cap.coordinate.pr-open.yaml  cap.diagnose.localize.yaml  cap.diagnose.parse-error.yaml  cap.diagnose.reproduce.yaml  cap.gate.human-disambiguate.yaml  cap.gate.human-signoff.yaml  cap.implement.scope-bounded.yaml  cap.implement.tdd-loop.yaml  cap.plan.draft.yaml  cap.plan.fix.yaml  cap.plan.track-gaps.yaml  cap.plan.vet.yaml  cap.refactor.draft.yaml  cap.research.context-assemble.yaml  cap.review.adversarial.yaml  cap.tests.baseline-snapshot.yaml  cap.tests.compare-baseline.yaml  cap.triage.classify-severity.yaml  cap.triage.route-component.yaml  cap.verify.regression-tests.yaml  cap.verify.workspace-green.yaml
crates/mcp-flowgate-core/tests/fixtures/cognitive-architectures/orchestrators/: flow.add-feature.yaml  flow.bugfix-from-error-log.yaml  flow.safe-refactor.yaml  flow.triage-issue.yaml
crates/mcp-flowgate-core/tests/fixtures/cognitive-architectures/scripts-library/: ci.full-sweep.yaml  inspect.cargo.dependency-tree.yaml  search.codebase.ripgrep.yaml  test.baseline.compare.yaml  test.baseline.snapshot.yaml  test.cargo.workspace.yaml  verify.workspace.green.yaml
crates/mcp-flowgate-core/tests/fixtures/cognitive-architectures/skills/: authoring.skill.script-shape.yaml  diagnose.codebase.search.yaml  implement.edit.constrained.yaml  implement.tdd.discipline.yaml  plan.specify.change-request.yaml  review.code.adversarial.yaml  review.code.final-approval.yaml
crates/mcp-flowgate-core/tests/fixtures/flowgate-meta/: flowgate.repo.yaml
crates/mcp-flowgate-core/tests/fixtures/flowgate-meta/capabilities/: cap.audit.mine-transitions.yaml  (+10 more)
crates/mcp-flowgate-core/tests/fixtures/repos/: two-repos-config.yaml
crates/mcp-flowgate-executors/: Cargo.toml
crates/mcp-flowgate-executors/src/: cli.rs  dry_run.rs  human.rs  import.rs  ingest.rs  lib.rs  mcp.rs  noop.rs  parallel.rs  pipeline.rs  registry.rs  registry_executor.rs  rest.rs  script.rs  structural_analysis.rs  workflow.rs
crates/mcp-flowgate-executors/tests/: cap_output_violation.rs  cap_terminated.rs  cli_json_stdout.rs  dry_run.rs  ete_smoke.rs  executor_kind_drift.rs  flow_orchestrators_e2e.rs  human_audit.rs  ingest.rs  meta_orchestrators_e2e.rs  meta_scripts_integration.rs  parallel_executor.rs  pipeline_executor.rs  registry_executor.rs  rest_executor.rs  scoped_capability_io_roundtrip.rs  script_executor.rs  script_executor_audit_descriptor.rs  structural_analysis.rs  workflow_executor.rs  workflow_failure_paths.rs
crates/mcp-flowgate-mcp-server/: Cargo.toml
crates/mcp-flowgate-mcp-server/src/: args.rs  handlers.rs  lib.rs  tools.rs
crates/mcp-flowgate-mcp-server/tests/: argument_parsing_parity.rs  authoring_workflow_e2e.rs  describe_audit.rs  dispatch_shape.rs  lexicon_embed.rs  scripts_search.rs  skills_search.rs  stable_tool_surface.rs  subject_definition_workflow.rs  subject_needs_definition.rs  subject_resolution.rs  tool_schema_snapshot.rs  trace_run_id_plumbing.rs
crates/mcp-flowgate-tui/: Cargo.toml
crates/mcp-flowgate-tui/src/: agent_config.rs  doctor.rs  doctor_probe_cache.rs  flowgate_mcp.rs  interpreter.rs  keyring.rs  lexicon.rs  lib.rs  main.rs  mcp_caller.rs  mcp_init.rs  mcp_wiring.rs  migrate.rs  provider_keys.rs  sub_agent.rs  theme.rs  tui_config.rs
crates/mcp-flowgate-tui/src/agent_resolver/: classify.rs  config.rs  mod.rs  preflight.rs  walk.rs
crates/mcp-flowgate-tui/tests/: agent_resolver_classify.rs  agent_resolver_config.rs  agent_resolver_main_args.rs  agent_resolver_preflight.rs  agent_resolver_runtime_cor.rs  agent_resolver_validate_envelope.rs  agent_resolver_walk.rs  binary_discovery.rs  cli_help_surface.rs  doctor_probe_cache.rs  doctor_smoke.rs  feature_translation.rs  interpreter.rs  lexicon_cli.rs  mcp_init.rs  migrate.rs  provider_keys.rs  sub_agent_smoke.rs
crates/mcp-flowgate/src/: main.rs
docs/: CONCEPTS.md  (+13 more)
(+143 files in other folders)
