[package]
name = "mcp-flowgate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime for mcp-flowgate: workflow engine, ports, audit, reliability"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
jsonschema = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# SPEC §22.2 — load-time HTTP fetch for https:// script URIs.
# Blocking client because config loading is synchronous and we don't
# want to bubble async up through every load_yaml call. The fetch
# happens exactly once at load + snapshot-stamp time; the body is
# then materialized into the snapshot per §8.2 so the network is not
# touched again for that script. We override the workspace reqwest
# locally to add `blocking` (the workspace dep is async-only because
# the executors crate uses the async client).
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "blocking"] }

# SPEC §28 — path_allowlist constraint kind uses gitignore-syntax
# glob matching. `globset` is the same matcher ripgrep/cargo use;
# proven, fast (compiled trie).
globset = "0.4"

[[bench]]
name = "workflow_bench"
harness = false

[[bench]]
name = "gateway_overhead"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"
serde_yaml = { workspace = true }
tempfile = "3"
tracing-subscriber = { workspace = true }
