[package]
name = "mcp-flowgate-executors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Default executors for mcp-flowgate (cli, rest, mcp, human, workflow, noop)"

[lib]
path = "src/lib.rs"

[dependencies]
mcp-flowgate-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# SPEC §22 — script executor materializes the snapshot's stamped body to
# a per-invocation temp file (chmod 0700) before exec.
tempfile = "3"

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
wiremock = "0.6"
