[package]
name = "mcp-flowgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP gateway with HATEOAS workflow governance, audit, and reliability policies"
default-run = "mcp-flowgate"

[[bin]]
name = "mcp-flowgate"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mcp-flowgate-core = { workspace = true }
mcp-flowgate-executors = { workspace = true }
mcp-flowgate-mcp-server = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
